[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
dotenv = "0.15.0"
image = "0.25.8"
tinybmp = "0.6.0"
wasmtime = "37.0.1"
wasmtime-wasi = "37.0.1"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
