[lib]
crate-type = ["cdylib", "rlib"] 

[package]
name = "wasm-steganography"
version = "0.1.0"
edition = "2024"

[package.metadata.component]
package = "component:steganography"

[package.metadata.component.bindings]
std-feature = "alloc"
symbol-namepsace = "bindings"

[dependencies]
bitstream-io = "4.9.0"
image = { path = "vendor/image" }
zune-image = { path = "vendor/image/vendor/zune-image-0.4.15" }
panic-halt = "1.0.0"
wit-bindgen = "0.46.0"
wit-bindgen-rt = { version = "0.44.0", default-features = false, features = ["bitflags"] }
zune-jpeg = { path = "vendor/image/vendor/zune-jpeg-0.4.13" }

[patch.crates-io]
zune-core = { path = "vendor/image/vendor/zune-core-0.4.12" }
zune-jpeg = { path = "vendor/image/vendor/zune-jpeg-0.4.13" }
zune-image = { path = "vendor/image/vendor/zune-image-0.4.15" }
jpeg-encoder = { path = "vendor/image/vendor/jpeg-encoder-0.5.1" }
